--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="section">
                     <h3 class="section-title">Modo de Preparo</h3>
                     <div class="instructions" id="modalInstructions"></div>
+                    <a class="youtube-btn" id="modalYoutubeLink" href="" target="_blank">Assistir no YouTube</a>
                 </div>
             </div>
         </div>
